show nav in edit view, and click to select

--- a/client/slides.css
+++ b/client/slides.css
@@ -39,6 +39,15 @@ h3 {
     text-align: center;
 }
 
+#slide-list .slide.selected-slide {
+    background: #aaccff;
+}
+
+/*
+#slide-list .slide .selected-slide {
+    background: #aaccff;
+}
+*/
 #slide-list .slide {
     display: block;
     height: 50px;
