toggling selection, arrows to move, implemented server moveSlide

--- a/client/slides.css
+++ b/client/slides.css
@@ -39,8 +39,16 @@ h3 {
     text-align: center;
 }
 
+#show-nav {
+    cursor: pointer;
+}
+
 #slide-list .slide.selected-slide {
     background: #aaccff;
+}
+
+#slide-list .slide.showing-slide {
+    background: #ffccaa;
 }
 
 /*
