--- a/client/core/core/meny.css
+++ b/client/core/core/meny.css
@@ -133,7 +133,7 @@ h2 {
  */
 .theContents {
 	/*background: #eee;*/
-	padding: 20px 40px;
+	/*padding: 20px 40px;*/
 	width: 100%;
 	height: 100%;
 	overflow-y: auto;
