--- a/client/edit/slides.css
+++ b/client/edit/slides.css
@@ -31,6 +31,15 @@ a, a:visited, a:active {
     color: #258;
 }
 
+.my-menu {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 11;
+    background: #cccccc;
+    /*display: none;*/
+}
+
 h3 {
     font-weight: bold;
     text-decoration: underline;
