--- a/client/show/show.css
+++ b/client/show/show.css
@@ -40,6 +40,7 @@
  *********************************************/
 
 .select-people {
+  display: none;
   position: absolute;
   top: 20px;
   right: 20px;
