--- a/client/show/show.css
+++ b/client/show/show.css
@@ -39,6 +39,10 @@
   top: 55px;
 }
 
+.reveal {
+  background-image: url(/cute_cat_picture.jpg);
+}
+
 /*********************************************
  * Select People: (from reveal.css)
  *********************************************/
