fixed show/hide select-people

--- a/client/show/show.css
+++ b/client/show/show.css
@@ -51,10 +51,16 @@
   display: none;
   position: absolute;
   top: 95px;
-  right: 20px;
+  right: 50px;
   z-index: 11;
   background: #cccccc;
   cursor: pointer;
+  height: 0px;
+}
+
+.select-people.enabled{
+  display: block;
+  height: auto;
 }
 
 .select-people .ui-selected {
